--- a/index.html
+++ b/index.html
@@ -1,13 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista Filmes</title>
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Filmes da Mari</title>
+  </head>
+  <body>
+    <!-- <main> define o conteúdo principal dentro do <body> em seu documento ou aplicação -->
+    <main class="main">
+      <header>
+        <div class="title">
+          <h1>Filmes da Mari</h1>
+        </div>
+      </header>
+      <section class="container">
+        <div class="left">
+          <form class="formulario">
+            Nome:
+            <input
+              autofocus
+              type="text"
+              class="js-todo-input"
+              placeholder="Digite aqui"
+            />
+            Imagem:<input type="text" class="js-todo-input" placeholder="URL da Imagem"/>
+          </form>
+        </div>
+        <div class="rigth">
+          <form class="formulario">
+            Gênero: <input type="text" class="js-todo-input" placeholder="Digite aqui"/>
+            Nota: <input type="number" min="0" max="10" step="0" class="js-todo-input"/>
+          </form>
+        </div>
+      </section>
+      <div class="botao">
+        <button type="submit">Enviar</button>
+      </div>
+      <section class="container2">
+        <ul class="filmes"></ul>
+      </section>
+    </main>
 
-</head>
-<body>
-    <script src="script.js"></script>
+    <footer>
+      <h3>
+        Developed by: Mariana Salvador
+      </h3>
+      
+    </footer>
+    <script src="../static/script.js"></script>
+  </body>
 </html>
