--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <footer>
       <h3>
-        Developed by: Mariana Salvador
+        Feito por: Mariana Salvador
       </h3>
       
     </footer>
